[package]
name = "blinky-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["log", "rp2040"]
rp2350 = ["embassy-rp/rp235xa"]
rp2040 = ["embassy-rp/rp2040"]
log = ["dep:log", "dep:embassy-usb-logger", "mcutie/log"]
defmt = [
  "dep:defmt",
  "dep:defmt-rtt",
  "panic-probe/print-defmt",
  "embassy-rp/defmt",
  "embassy-executor/defmt",
  "embassy-sync/defmt",
  "embassy-time/defmt",
  "embassy-net/defmt",
  "embassy-usb/defmt",
  "embassy-futures/defmt",
  "cyw43/defmt",
  "cyw43-pio/defmt",
  "panic-probe/print-defmt",
  "embedded-io-async/defmt-03",
]

[dependencies]
embassy-executor = { version = "0.6.3", features = [
  "task-arena-size-98304",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "integrated-timers",
] }
embassy-rp = { version = "0.2.0", features = [
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
] }
embassy-time = "0.3.2"
embassy-net = { version = "0.5.0", features = [
  "dhcpv4",
  "tcp",
  "dns",
  "proto-ipv4",
] }
embassy-usb = "0.3.0"
embassy-usb-logger = { version = "0.2.0", optional = true }
embassy-futures = "0.1.0"
embassy-sync = "0.6.0"
embedded-io-async = "0.6.1"
cyw43 = { version = "0.2.0", features = ["firmware-logs"] }
cyw43-pio = { version = "0.2.0" }
panic-probe = "0.3.2"
static_cell = "2.1.0"
critical-section = "1.2.0"
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
assign-resources = "0.4.1"
pio = "0.2.1"
fixed = "1.28.0"
rand = { version = "0.8.5", default-features = false }
mqttrust = "0.6.0"
hex = { version = "0.4.3", default-features = false }
defmt = { version = "0.3.8", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
log = { version = "0.4.22", optional = true }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
num-traits = { version = "0.2.19", default-features = false }
mcutie = "0.2.0"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-net-v0.5.0" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-net-v0.5.0" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-net-v0.5.0" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-net-v0.5.0" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-net-v0.5.0" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-net-v0.5.0" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-net-v0.5.0" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-net-v0.5.0" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-net-v0.5.0" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-net-v0.5.0" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-net-v0.5.0" }
